k8s/components/knative-net-gateway-api/base/upstream/resources/007-validatingwebhookconfiguration-cluster-config.webhook.gateway-api.networking.internal.knative.dev.yaml
# Source apiVersion: admissionregistration.k8s.io/v1
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/component: net-gateway-api
    app.kubernetes.io/name: knative-serving
    app.kubernetes.io/version: 1.22.1
    networking.knative.dev/ingress-provider: gateway-api
  name: config.webhook.gateway-api.networking.internal.knative.dev
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: net-gateway-api-webhook
        namespace: knative-serving
    failurePolicy: Fail
    name: config.webhook.gateway-api.networking.internal.knative.dev
    objectSelector:
      matchLabels:
        app.kubernetes.io/component: net-gateway-api
        app.kubernetes.io/name: knative-serving
    sideEffects: None
